# ptrpred_heqiao

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
Reproducible_Plots/Simulated_Datasets/: T_Results_Whole.csv  battery_cell_SVD_whole_stats.csv  dataset_description_with_time3.csv  df_t_batterycccv108.csv  df_t_batterycccv135.csv  df_t_batterycccv27.csv  df_t_batterycccv54.csv  df_t_batterycccv81.csv
datasets/NREL/: readme2.md  reproduce_nrel_plots.py
datasets/NREL/Battery_cells/: data_preprocessing_NREL.R  dataset_correspondence.xlsx  dataset_correspondence_information.xlsx  local_average_results.py  mean_loading_prop.py  signals.py
datasets/NREL/Plots/: MLE_python.py  NREL_multiSOC_plots.R  plot_lead_time_temperature.py
datasets/NREL/Sensitivity_Analysis/: SVD_analysis_summary.md  battery_class_results.csv  battery_pipeline.py
datasets/Simulated/data_generating_process/: batteryCCCV.m  batteryCCCV_SC1.csv  batteryCCCV_SC10.csv  batteryCCCV_SC11.csv  batteryCCCV_SC12.csv  batteryCCCV_SC13.csv  batteryCCCV_SC14.csv  batteryCCCV_SC15.csv  batteryCCCV_SC16.csv  (+30 more)
docs/: COMPLEXITY.md
pTRPred_pkg/: README.md  pyproject.toml
pTRPred_pkg/src/pTRPred/: __init__.py  detection.py  plotting.py  preprocessing.py  rollsvd.py
pTRPred_pkg/tests/: test_arimax.py  test_plotting.py  test_preprocessing.py  test_windows.py
src/pTRPred/: __init__.py  arimax.py  kernelpca.py  signals.py  windows.py
tests/: conftest.py  test_arimax.py  test_detection.py  test_kernelpca.py  test_plotting.py  test_preprocessing.py  test_rollsvd.py  test_windows.py
(+519 files in other folders)
