[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pTRPred"
version = "0.1.0"
description = "Rolling/expanding window utilities, rolling covariance SVD, ARIMAX residual pipelines, and multi-scale slope-vote detectors."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Shubha Sankar Banerjee, Heqiao Ruan", email = "shubha.banerjee@pitt.edu, her76@pitt.edu"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
arima = ["pmdarima>=2.0.0"]
fast = ["scipy>=1.10"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
